[gd_scene load_steps=2 format=3 uid="uid://cjrphgcn56nnw"]

[ext_resource type="Script" path="res://demo/scripts/generate_data.gd" id="1_ge8sd"]

[node name="GenerateData" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ge8sd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "add High-Scores"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "idle..."

[node name="Count" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 5000.0
value = 1.0
tick_count = 20

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "bored"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
